# work

./: .gitignore  CLAUDE.md  COMPILATION.md  Cargo.toml  IMPLEMENTATION_REPORT.md  INSTALL.md  README.md  build.sh  install.sh  release.sh  work.rb
.github/workflows/: release.yml
.specify/memory/: constitution.md
specs/001-git-worktree-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-git-worktree-cli/checklists/: requirements.md
specs/002-fix-release/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-release/checklists/: requirements.md
specs/003-branch-slash-conversion/: IMPLEMENTATION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-branch-slash-conversion/checklists/: requirements.md
specs/003-branch-slash-conversion/contracts/: cli-commands.md
specs/005-worktree-branch-source/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-worktree-branch-source/checklists/: requirements.md
specs/005-worktree-branch-source/contracts/: README.md
src/: main.rs
src/cli/: commands.rs  output.rs
src/core/: git_ops.rs  mod.rs  repository.rs  worktree.rs
src/utils/: errors.rs  mod.rs  path.rs
tests/integration/: worktree_slash_tests.rs
